<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bad_blue_background"
    tools:context=".KaraokeSongActivity">

    <TextView
        android:id="@+id/main_song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:textSize="38sp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/song_title_yagoda_malinka"
        android:textAlignment="center" />

    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/background_gradient_start"
        android:layout_below="@id/main_song_title"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image_3"
            android:contentDescription="@string/desc_karaoke_background" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/video_container"
        android:layout_marginTop="20dp"
        android:background="@color/bad_blue_background"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <ImageView
            android:id="@+id/karaoke_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/karaoke_logo"
            android:scaleType="fitCenter"
            android:contentDescription="@string/desc_karaoke_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/karaoke_logo"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="@color/search_opaque"
                android:text="@string/song_line_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:text="@string/song_line_2" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>