<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bad_blue_background"
    tools:context=".MainActivity"
    tools:deviceIds="tv">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="-150dp" android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="64dp">

        <ImageView
            android:layout_width="550dp"
            android:layout_height="240dp"
            android:layout_marginBottom="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/karaoke_logo" />

        <EditText
            android:id="@+id/edit_text_login"
            android:layout_width="600dp"
            android:layout_height="48dp"
            android:hint="@string/hint_login"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_rounded_corners"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="15dp"
            android:textColor="#000000"
            android:textColorHint="#838383"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="600dp"
            android:layout_height="48dp"
            android:hint="@string/hint_password"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/input_rounded_corners"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:textColor="#000000"
            android:textColorHint="#838383"/>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="600dp"
            android:layout_height="48dp"
            android:text="@string/button_sign_in"
            android:textSize="18sp"
            android:background="@drawable/rounded_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="onClickStepsActivity"/>

    </LinearLayout>
</RelativeLayout>