<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_purple"
    android:padding="32dp"
    tools:context=".AlbumsActivity"
    tools:deviceIds="tv">

    <TextView
        android:id="@+id/title_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_albums"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/logo_karaoke_small"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:src="@drawable/karaoke_logo"
        android:scaleType="fitEnd"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/title_albums"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="32dp" />

    <GridLayout
        android:id="@+id/album_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_albums"
        android:layout_marginTop="40dp"
        android:columnCount="4"
        android:rowCount="2"
        android:orientation="horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_1" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_detskie_pesni"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_2" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_pop_2020"
            android:onClick="onClickStepsActivity"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_3" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_pesni_pobedy"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_4" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_sovrem_detskie"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_1" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_detskie_pesni"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_2" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_pop_2020"
            android:onClick="onClickStepsActivity"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_3" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_pesni_pobedy"/>

        <ImageView
            android:layout_width="0dp" android:layout_height="0dp"
            android:src="@drawable/album_4" android:scaleType="fitCenter"
            android:layout_columnWeight="1" android:layout_rowWeight="1"
            android:layout_margin="16dp" android:focusable="true" android:clickable="true"
            android:contentDescription="@string/desc_album_sovrem_detskie"/>

    </GridLayout>

</RelativeLayout>